Make jdk8 compatible.